--- a/1-Authentication/7-sign-in-express-mfa/App/views/index.hbs
+++ b/1-Authentication/7-sign-in-express-mfa/App/views/index.hbs
@@ -3,7 +3,7 @@
 <p>Hi {{username}}!</p>
 <a href="/users/id">View ID token claims</a>
 <br>
-<a href="/users/updateProfile">Profile editing</a>
+<a href="/users/gatedUpdateProfile">Profile editing</a>
 <br>
 <a href="/auth/signout">Sign out</a>
 {{else}}
